# MakeItUrOwn

./: CMakeLists.txt  README.md  main.cpp
include/: Epoll.h  GlobalVar.h  Server.h
include/Http/: HttpData.h  HttpEnum.h  HttpParse.h  HttpRequest.h  HttpResponse.h
include/Socket/: ClientSocket.h  ServerSocket.h
pages/: 404.html  DEFAULT_PAGE.html  Home_Page.html  IG.html  NOT_FOUND_PAGE.html  bookmark.html  index.html
pages/Home_Page/: C++.html
src/: Epoll.cpp  Server.cpp
src/Http/: HttpData.cpp  HttpParse.cpp  HttpRequest.cpp  HttpResponse.cpp
src/Socket/: ClientSocket.cpp  ServerSocket.cpp
